--- a/project-01/src/sass/components/list-warranty.scss
+++ b/project-01/src/sass/components/list-warranty.scss
@@ -43,7 +43,7 @@
   }
 
   &:not(:nth-last-of-type(-3n+1)) {
-    padding-bottom: 18px;
+    padding-bottom: 20px;
   }
 
   &:not(:nth-last-of-type(-3n+1)) {
@@ -69,6 +69,10 @@
   &--location {
     display: none;
   }
+
+  &--newstring {
+    display: none;
+  }
 }
 
 .list-warranty__text--colortext {
@@ -78,7 +82,13 @@
 
 @media screen and (min-width: 768px) {
   .list-warranty {
-    padding: 32px 0px 0px;
+    padding: 34px 0px 0px;
+  }
+
+  .list-warranty__item {
+    &:not(:nth-last-of-type(-3n+1)) {
+      padding-bottom: 18px;
+    }
   }
 
   .list-warranty__text {
@@ -96,7 +106,7 @@
 
 @media screen and (min-width: 1280px) {
   .list-warranty {
-    padding: 46px 0px 0px;
+    padding: 44px 0px 0px;
     margin-bottom: 46px;
   }
 
@@ -112,14 +122,15 @@
     }
 
     &:not(:nth-last-of-type(-3n+1)) {
-      padding-bottom: 26px;
+      padding-bottom: 24px;
     }
   }
 
   .list-warranty__text {
     font-size: 18px;
     line-height: 1.62;
-    padding: 0px 20px 0px 0px;
+    padding: 0px;
+    letter-spacing: 0.5px;
 
     &--position {
       padding-right: 0px;
@@ -132,6 +143,10 @@
     &--location {
       display: none;
     }
+    
+    &--newstring {
+      display: block;
+    }
   }
 }
 
@@ -139,20 +154,21 @@
 @media screen and (min-width: 1680px) {
   .list-warranty {
     padding: 60px 0px 0px;
-    margin-bottom: 60px;
+    margin-bottom: 56px;
   }
 
   .list-warranty__item {
     padding-left: 48px;
 
     &:not(:nth-last-of-type(-3n+1)) {
-      padding-bottom: 26px;
+      padding-bottom: 24px;
     }
   }
 
   .list-warranty__text {
     font-size: 21px;
     line-height: 1.4;
+    letter-spacing: 0.7px;
     //   padding: 0px 20px 0px 0px;
 
     &--newline {
