--- a/project-01/src/sass/components/section-teacher.scss
+++ b/project-01/src/sass/components/section-teacher.scss
@@ -6,41 +6,42 @@
   display: flex;
   flex-direction: column;
   padding: 0px 20px;
-  margin-bottom: 42px;
+  margin-bottom: 41px;
 }
 
 .section-teacher__title {
   font-size: 20px;
   color: #111517;
   line-height: 1.5;
-  margin: 0px 0px 24px;
+  margin: 0px 0px 20px;
   letter-spacing: 1.2px;
 }
 
 @media screen and (min-width: 768px) {
   .section-teacher__wrapper {
     padding: 0px 40px;
-    margin-bottom: 42px;
+    margin-bottom: 38px;
   }
 
   .section-teacher__title {
     font-size: 26px;
     line-height: 2.405;
-    margin-bottom: 20px;
+    margin-bottom: 14px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .section-teacher__wrapper {
     padding: 80px 35px 0px;
-    margin-bottom: 76px;
+    margin-bottom: 72px;
   }
 
 
   .section-teacher__title {
     font-size: 42px;
     line-height: 1.489;
-    margin-bottom: 42px;
+    margin-bottom: 45px;
+    letter-spacing: 1.8px;
   }
 }
 
@@ -48,14 +49,14 @@
 @media screen and (min-width: 1680px) {
   .section-teacher__wrapper {
     padding: 0px 240px 0px 186px;
-    margin-bottom: 128px;
+    margin-bottom: 108px;
   }
 
 
   .section-teacher__title {
     font-size: 46px;
     line-height: 1.365;
-    margin-bottom: 72px;
+    margin-bottom: 68px;
   }
 }
 
