--- a/project-01/src/sass/components/section-action.scss
+++ b/project-01/src/sass/components/section-action.scss
@@ -27,6 +27,7 @@
     font-size: 26px;
     line-height: 1.269;
     margin: 0px 0px 34px 0px;
+    padding-right: 10px;
   }
 }
 
@@ -54,7 +55,7 @@
   .section-action__title {
     font-size: 46px;
     line-height: 1.365;
-    //   text-align: left;
+    letter-spacing: 1.9px;
     margin-bottom: 0px 0px 32px 0px;
   }
 }
