--- a/project-01/src/sass/components/section-problem.scss
+++ b/project-01/src/sass/components/section-problem.scss
@@ -45,7 +45,7 @@
   .section-problem__wrapper {
     width: 100%;
     height: 328px;
-    padding: 54px 40px 0px 40px;
+    padding: 56px 40px 0px 40px;
     background-image: url(../../images/bgr-fire.png);
     background-repeat: no-repeat;
     background-size: contain;
@@ -124,6 +124,7 @@
     line-height: 1.365;
     padding-right: 530px;
     margin-bottom: 64px;
+    letter-spacing: 1.8px;
 
     &--position {
       padding: 0px;
