--- a/project-01/src/sass/components/copyright.scss
+++ b/project-01/src/sass/components/copyright.scss
@@ -8,6 +8,7 @@
   font-size: 11px;
   color: #fcfdfd6b;
   margin: 0px;
+  letter-spacing: 0.6px;
 }
 
 .copyright__symbol {
@@ -15,14 +16,34 @@
   color: #fdfefe6b;
 }
 
+
+@media screen and (min-width: 768px) {
+  .copyright {
+    padding: 30px 0px 28px;
+  }
+}
+
+
 @media screen and (min-width: 1280px) {
   .copyright {
-    padding: 22px 0px;
+    padding: 14px 0px;
   }
 
   .copyright__text {
     font-size: 14.583px;
     line-height: 2.571;
+    letter-spacing: 0.9px;
   }
 }
 
+@media screen and (min-width: 1680px) {
+  .copyright {
+    padding: 14px 0px;
+  }
+
+  .copyright__text {
+    font-size: 14.583px;
+    line-height: 2.571;
+    letter-spacing: 0.9px;
+  }
+}
