--- a/project-01/src/sass/components/footer.scss
+++ b/project-01/src/sass/components/footer.scss
@@ -6,8 +6,8 @@
 .footer__wrapper {
   display: flex;
   flex-direction: column;
-  text-align: center;
-  padding: 34px 0px 0px;
+  align-items: center;
+  padding: 30px 0px 0px;
 }
 
 .footer__menu {
@@ -30,7 +30,7 @@
   width: 78px;
   height: 30px;
   font-size: 0px;
-  margin-bottom: 14px;
+  margin-bottom: 17px;
 }
 
 .footer__form {
@@ -59,9 +59,11 @@
   }
 }
 
+
 @media screen and (min-width: 768px) {
   .footer__wrapper {
-    padding: 36px 40px 0px;
+    padding: 32px 40px 0px;
+    align-items: start;
   }
 
   .footer__menu {
@@ -69,13 +71,13 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    margin-bottom: 40px;
+    margin-bottom: 36px;
   }
 
   .footer__logo {
     width: 128px;
-    height: 50px;
-    margin: 0px 82px 0px 0px;
+    min-height: 50px;
+    margin: 0px 86px 0px 0px;
   }
 
   .footer__item--logo {
@@ -83,7 +85,7 @@
   }
 
   .footer__form {
-    margin: 0px 60px 0px 0px;
+    margin: 0px 54px 0px 0px;
   }
 
   .footer__icon {
@@ -91,17 +93,18 @@
   }
 }
 
+
 @media screen and (min-width: 1280px) {
   .footer__wrapper {
-    padding: 46px 35px 0px;
+    padding: 48px 35px 0px;
   }
 
   .footer__menu {
-    margin-bottom: 52px;
+    margin-bottom: 48px;
   }
 
   .footer__logo {
-    margin-right: 252px;
+    margin-right: 256px;
   }
 }
 
