--- a/project-01/src/sass/components/form-registration.scss
+++ b/project-01/src/sass/components/form-registration.scss
@@ -5,7 +5,7 @@
   color: #ffffff;
   line-height: 2.325;
   background-color: transparent;
-  padding: 8px 5px 8px 14px;
+  padding: 8px 5px 10px 18px;
 
   &::-webkit-input-placeholder {
     font-size: 13px;
@@ -28,9 +28,11 @@
   outline-offset: -2px;
 }
 
+
 @media screen and (min-width: 768px) {
   .input-field {
-    width: 400px;
+    min-width: 400px;
+    // flex: 1 1 400px;
   }
 }
 
