--- a/project-01/src/sass/components/button.scss
+++ b/project-01/src/sass/components/button.scss
@@ -1,5 +1,4 @@
 .button {
-  // max-width: 250px;
   font-size: 11px;
   line-height: $main-text-height;
   @extend %button;
@@ -30,11 +29,13 @@
       background-color: #ff6b08;
       border: 2px solid #ffffff;
     }
-  }
-}
 
-@media screen and (min-width: 1280px) {
-  .button {
+    &--longer {
+      padding: 23px 26px 23px 25px;
+    }
+  }
+
+  @include desktop {
     font-size: 12px;
     padding: 26px 5px 25px 5px;
 
@@ -52,14 +53,12 @@
       padding: 24px 36px;
     }
 
-    &--longer{
+    &--longer {
       padding: 25px 25px;
     }
   }
-}
 
-@media screen and (min-width: 1680px) {
-  .button {
+  @include desktop-wide {
     max-width: 350px;
     font-size: 14px;
     padding: 24px 5px;
@@ -74,27 +73,9 @@
       letter-spacing: 1.7px;
     }
 
-    &--longer{
+    &--longer {
       padding: 24px 15px 23px 15px;
       letter-spacing: 2.9px;
     }
   }
 }
-
-
-// .footer--button {
-//   font-size: $secondary-font-size;
-//   padding: 12px 34px;
-//   border: none;
-// }
-
-// &--lighter {
-//   color: $primary-white-color;
-//   background-color: $background-lighter-color;
-//   border: 3px solid $primary-white-color;
-
-//   &:hover,
-//   &:hover {
-//     color: $primary-yelow-color;
-//     border-color: $primary-yelow-color;
-//   }
