--- a/project-01/src/sass/components/card-teacher.scss
+++ b/project-01/src/sass/components/card-teacher.scss
@@ -1,12 +1,61 @@
 .card {
   display: flex;
   flex-direction: column;
+
+  @include tablet {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  @include desktop {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.card__content {
+  @include tablet {
+    display: flex;
+    flex-direction: column;
+    width: 398px;
+  }
+
+  @include desktop {
+    display: flex;
+    flex-direction: column;
+    // width: 632px;
+    @include width-percent(628px, 1210px);
+  }
+
+  @include desktop-wide {
+    // min-width: 676px;
+    @include width-percent(650px, 1210px);
+  }
 }
 
 .card__img {
   width: 280px;
   height: 214px;
   margin-bottom: 18px;
+
+  @include tablet {
+    width: 246px;
+    height: 320px;
+  }
+
+  @include desktop {
+    // width: 493px;
+    @include width-percent(493px, 1210px);
+    // min-height: 644px;
+    @include height-percent(644px, 1210px);
+  }
+
+  @include desktop-wide {
+    // width: 493px;
+    @include width-percent(478px, 1210px);
+    // min-height: 644px;
+    @include height-percent(644px, 1210px);
+  }
 }
 
 .card__title {
@@ -17,12 +66,41 @@
   padding-bottom: 4px;
   border-bottom: 1px solid #d1d1d1;
   letter-spacing: 1.2px;
+
+  @include tablet {
+    font-size: 20px;
+    line-height: 1;
+    margin: 0px 0px 18px;
+    padding-bottom: 12px;
+  }
+
+  @include desktop {
+    font-size: 29px;
+    line-height: 1;
+    margin: 0px 0px 34px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #d1d1d1;
+  }
+
+  @include desktop-wide {
+    margin: 0px 0px 26px;
+    padding-bottom: 14px;
+  }
 }
 
 .card__items {
   @extend %list;
   padding-left: 34px;
   margin-bottom: 40px;
+
+  @include tablet {
+    margin-bottom: 36px;
+  }
+
+  @include desktop {
+    margin-bottom: 58px;
+    padding-left: 44px;
+  }
 }
 
 .card__item {
@@ -40,10 +118,24 @@
     left: -34px;
     background-repeat: no-repeat;
     background-size: cover;
+
+    @include desktop {
+      width: 20px;
+      height: 16px;
+      left: -40px;
+    }
   }
 
   &:not(:nth-last-of-type(-3n+1)) {
     margin-bottom: 16px;
+
+    // @include desktop {
+    //   margin-bottom: 16px;
+    // }
+
+    @include desktop-wide {
+      margin-bottom: 17px;
+    }
   }
 }
 
@@ -57,6 +149,26 @@
   &--position {
     padding-right: 30px;
   }
+
+  @include tablet {
+    padding-right: 10px;
+    letter-spacing: 1.3px;
+  }
+
+  @include desktop {
+    font-size: 16.667px;
+    line-height: 1.75;
+    padding-right: 104px;
+    letter-spacing: 1.1px;
+
+    &--position {
+      padding-right: 0px;
+    }
+  }
+
+  @include desktop-wide {
+    padding: 0px 150px 0px 0px;
+  }
 }
 
 .card__text {
@@ -65,7 +177,6 @@
   margin: 0px 0px 16px 0px;
   padding: 0px 16px;
   position: relative;
-  // white-space: pre-line;
   letter-spacing: 0.3px;
 
   &--position::before {
@@ -78,9 +189,35 @@
     top: -20px;
   }
 
-  // &:not(:nth-last-of-type(-n+1)) {
-  //   margin-bottom: 30px;
-  // }
+  @include tablet {
+    margin-bottom: 18px;
+    padding: 0px 20px 0px 0px;
+    white-space: initial;
+  }
+
+  @include desktop {
+    font-size: 16.667px;
+    line-height: 1.75;
+    margin-bottom: 16px;
+    padding: 0px 34px 0px 0px;
+    word-wrap: break-word;
+    word-spacing: 3px;
+
+    &--position::before {
+      top: -36px;
+    }
+  }
+
+  @include desktop-wide {
+    margin-bottom: 14px;
+    padding: 0px 14px 0px 0px;
+    word-spacing: 3px;
+
+    // всі, крім останнього
+    &:nth-last-of-type(-3n+1) {
+      margin-bottom: 28px;
+    }
+  }
 }
 
 .card__link {
@@ -98,171 +235,14 @@
   &:focus {
     text-shadow: 1px 1px 5px #ff6b08;
   }
-}
 
-
-@media screen and (min-width: 768px) {
-  .card {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .card__content {
-    display: flex;
-    flex-direction: column;
-    width: 398px;
-  }
-
-  .card__img {
-    // display: inline-block;
-    width: 246px;
-    height: 320px;
-  }
-
-  .card__items {
-    margin-bottom: 36px;
-  }
-
-  .card__title {
-    font-size: 20px;
-    line-height: 1;
-    margin: 0px 0px 18px;
-    padding-bottom: 12px;
-  }
-
-  .card__description {
-    padding-right: 10px;
-    letter-spacing: 1.3px;
-  }
-
-  .card__text {
-    margin-bottom: 18px;
-    padding: 0px 20px 0px 0px;
-    white-space: initial;
-  }
-
-  .card__link {
+  @include tablet {
     padding-left: 0px;
     line-height: 1.652;
   }
-}
 
-
-@media screen and (min-width: 1280px) {
-  .card {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .card__content {
-    display: flex;
-    flex-direction: column;
-    // width: 632px;
-    @include width-percent(628px, 1210px);
-  }
-
-  .card__img {
-    // width: 493px;
-    @include width-percent(493px, 1210px);
-    // min-height: 644px;
-    @include height-percent(644px, 1210px);
-  }
-
-  .card__title {
-    font-size: 29px;
-    line-height: 1;
-    margin: 0px 0px 34px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #d1d1d1;
-  }
-
-  .card__items {
-    margin-bottom: 58px;
-    padding-left: 44px;
-  }
-
-  .card__item::before {
-    width: 20px;
-    height: 16px;
-    left: -40px;
-  }
-
-  .card__item:not(:nth-last-of-type(-3n+1)) {
-    margin-bottom: 16px;
-  }
-
-  .card__description {
+  @include desktop {
     font-size: 16.667px;
     line-height: 1.75;
-    padding-right: 104px;
-    letter-spacing: 1.1px;
-
-    &--position {
-      padding-right: 0px;
-    }
-  }
-
-  .card__text {
-    font-size: 16.667px;
-    line-height: 1.75;
-    margin-bottom: 16px;
-    padding: 0px 34px 0px 0px;
-    word-wrap: break-word;
-    // hyphens: none;
-    word-spacing: 3px;
-    // white-space: initial;
-
-    &--position::before {
-      top: -36px;
-    }
-  }
-
-  .card__link {
-    font-size: 16.667px;
-    line-height: 1.75;
-    // padding-left: 0px;
-  }
-}
-
-
-@media screen and (min-width: 1680px) {
-  .card__content {
-    // min-width: 676px;
-    @include width-percent(650px, 1210px);
-  }
-
-  .card__img {
-    // width: 493px;
-    @include width-percent(478px, 1210px);
-    // min-height: 644px;
-    @include height-percent(644px, 1210px);
-  }
-
-  .card__title {
-    margin: 0px 0px 26px;
-    padding-bottom: 14px;
-  }
-
-  .card__item:not(:nth-last-of-type(-3n+1)) {
-    margin-bottom: 17px;
-  }
-
-  .card__description {
-    padding: 0px 150px 0px 0px;
-
-    &--position {
-      padding-right: 0px;
-    }
-  }
-
-  .card__text {
-    margin-bottom: 14px;
-    padding: 0px 14px 0px 0px;
-    word-spacing: 3px;
-
-    // всі, крім останнього
-    &:nth-last-of-type(-3n+1) {
-      margin-bottom: 28px;
-    }
   }
 }
