--- a/project-01/src/sass/components/header-training.scss
+++ b/project-01/src/sass/components/header-training.scss
@@ -1,7 +1,40 @@
+.section-training__wrapper {
+  @include tablet {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  @include desktop {
+    padding: 0px 35px;
+  }
+
+  @include desktop-wide {
+    padding: 0px;
+  }
+}
+
 .section-training__content {
   display: flex;
   flex-direction: column;
   align-items: start;
+
+  @include tablet {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    max-width: 280px;
+  }
+
+  @include desktop {
+    max-width: 498px;
+    padding-top: 53px;
+  }
+
+  @include desktop-wide {
+    max-width: 610px;
+    padding-top: 70px;
+  }
 }
 
 .section-training__title {
@@ -11,6 +44,27 @@
   color: #18191d;
   margin: 0px 0px 26px 0px;
   letter-spacing: 0.6px;
+
+  @include tablet {
+    font-size: 26px;
+    line-height: 1.291;
+    padding-top: 8px;
+    margin: 0px 0px 26px 0px;
+  }
+
+  @include desktop {
+    font-size: 48px;
+    line-height: 1.208;
+    letter-spacing: 1.05px;
+    margin: 0px 0px 28px 0px;
+  }
+
+  @include desktop-wide {
+    font-size: 58.333px;
+    line-height: 1.34;
+    margin-bottom: 24px;
+    letter-spacing: 1.4px;
+  }
 }
 
 .section-training__slogan {
@@ -29,74 +83,14 @@
   &--colortext {
     color: #ff6b08;
   }
-}
 
-.section-training__button {
-  margin: 0px 0px 34px;
-}
-
-.section-training__img {
-  max-width: 216px;
-  margin: 0px auto;
-}
-
-
-@media screen and (min-width: 768px) {
-  .section-training__wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .section-training__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    max-width: 280px;
-  }
-
-  .section-training__title {
-    font-size: 26px;
-    line-height: 1.291;
-    padding-top: 8px;
-    margin: 0px 0px 26px 0px;
-  }
-
-  .section-training__slogan {
+  @include tablet {
     line-height: 1.35;
     // padding-top: 10px;
     margin-bottom: 32px;
   }
 
-  .section-training__button {
-    margin: 0px;
-  }
-
-  .section-training__img {
-    max-width: 370px;
-    margin: 0px;
-  }
-}
-
-
-@media screen and (min-width: 1280px) {
-  .section-training__wrapper {
-    padding: 0px 35px;
-  }
-
-  .section-training__content {
-    max-width: 498px;
-    padding-top: 53px;
-  }
-
-  .section-training__title {
-    font-size: 48px;
-    line-height: 1.208;
-    letter-spacing: 1.05px;
-    margin: 0px 0px 28px 0px;
-  }
-
-  .section-training__slogan {
+  @include desktop {
     min-width: 480px;
     font-size: 18px;
     line-height: 1.463;
@@ -104,42 +98,44 @@
     letter-spacing: 0.8px;
   }
 
-  .section-training__img {
-    max-width: 682px;
-    margin: 0px;
-  }
-
-  .section-training__button {
-    letter-spacing: 2.2px;
-  }
-}
-
-@media screen and (min-width: 1680px) {
-  .section-training__wrapper {
-    padding: 0px;
-  }
-
-  .section-training__content {
-    max-width: 610px;
-    padding-top: 70px;
-  }
-
-  .section-training__title {
-    font-size: 58.333px;
-    line-height: 1.34;
-    margin-bottom: 24px;
-    letter-spacing: 1.4px;
-  }
-  
-  .section-training__slogan {
+  @include desktop-wide {
     font-size: 21px;
     line-height: 1.6;
     margin-bottom: 42px;
     min-width: 540px;
     letter-spacing: 1px;
   }
+}
 
-  .section-training__img {
+.section-training__button {
+  margin: 0px auto 34px;
+
+  @include tablet {
+    margin: 0px;
+  }
+
+  @include desktop {
+    letter-spacing: 2.2px;
+  }
+
+  @include desktop-wide {}
+}
+
+.section-training__img {
+  max-width: 216px;
+  margin: 0px auto;
+
+  @include tablet {
+    max-width: 370px;
+    margin: 0px;
+  }
+
+  @include desktop {
+    max-width: 682px;
+    margin: 0px;
+  }
+
+  @include desktop-wide {
     max-width: 840px;
     margin: 0px;
   }
