--- a/project-01/src/sass/components/logo.scss
+++ b/project-01/src/sass/components/logo.scss
@@ -8,10 +8,8 @@
   &:focus {
     box-shadow: 2px 2px 10px 2px #ff6b08;
   }
-}
 
-@media screen and (min-width: 768px) {
-  .logo {
+  @include tablet {
     max-width: 122px;
     // max-height: 43px;
     margin-bottom: 6px;
