--- a/project-01/src/sass/components/section-form.scss
+++ b/project-01/src/sass/components/section-form.scss
@@ -3,15 +3,42 @@
   background-image: url(../../images/form-bgr.png);
   background-repeat: no-repeat;
   background-size: cover;
+
+  @include tablet {
+    background-image: url(../../images/form-bgr-tabl.png);
+  }
+
+  @include desktop {
+    background-image: url(../../images/form-bgr-desk.png);
+  }
+
+  @include desktop-wide {
+    background-image: url(../../images/form-bgr-desk-larg.png);
+  }
 }
 
 .section-form__wrapper {
   padding: 50px 20px 0px;
   margin: 0px 0px 58px 0px;
   text-align: center;
+
+  @include tablet {
+    padding: 54px 100px 0px;
+    margin-bottom: 64px;
+  }
+
+  @include desktop {
+    padding: 78px 160px 0px;
+    margin-bottom: 88px;
+  }
+
+  @include desktop-wide {
+    padding: 118px 356px 0px;
+    margin-bottom: 100px;
+  }
 }
 
-.section-form__form{
+.section-form__form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,6 +57,24 @@
     color: #ff6b08;
     padding: 0px;
   }
+
+  @include tablet {
+    font-size: 22px;
+    line-height: 1.744;
+    margin: 0px 0px 26px;
+  }
+
+  @include desktop {
+    font-size: 37.5px;
+    line-height: 1.334;
+    margin: 0px 0px 42px;
+    letter-spacing: 1.8px;
+  }
+
+  @include desktop-wide {
+    margin: 0px 0px 56px;
+    letter-spacing: 1.6px;
+  }
 }
 
 .section-form__description {
@@ -44,34 +89,8 @@
     color: #ff6b08;
     padding: 0px;
   }
-}
 
-.section-form__input:not(:nth-last-of-type(-2n+1)) {
-  margin-bottom: 20px;
-}
-
-.section-form__input:nth-last-of-type(-2n+1) {
-  margin-bottom: 56px;
-}
-
-
-@media screen and (min-width: 768px) {
-  .section-form {
-    background-image: url(../../images/form-bgr-tabl.png);
-  }
-
-  .section-form__wrapper {
-    padding: 54px 100px 0px;
-    margin-bottom: 64px;
-  }
-
-  .section-form__title {
-    font-size: 22px;
-    line-height: 1.744;
-    margin: 0px 0px 26px;
-  }
-
-  .section-form__description {
+  @include tablet {
     font-size: 15px;
     line-height: 1.333;
     white-space: initial;
@@ -81,35 +100,12 @@
     text-align: left;
     padding-left: 56px;
 
-    &--colortext{
+    &--colortext {
       padding: 0px;
     }
   }
 
-  .section-form__input:nth-last-of-type(-2n+1) {
-    margin-bottom: 30px;
-  }
-}
-
-
-@media screen and (min-width: 1280px) {
-  .section-form {
-    background-image: url(../../images/form-bgr-desk.png);
-  }
-
-  .section-form__wrapper {
-    padding: 78px 160px 0px;
-    margin-bottom: 88px;
-  }
-
-  .section-form__title {
-    font-size: 37.5px;
-    line-height: 1.334;
-    margin: 0px 0px 42px;
-    letter-spacing: 1.8px;
-  }
-
-  .section-form__description {
+  @include desktop {
     font-size: 18px;
     line-height: 1.361;
     margin: 0px 0px 52px;
@@ -118,39 +114,34 @@
     padding-left: 0px;
   }
 
-  .section-form__input:not(:nth-last-of-type(-2n+1)) {
-    margin-bottom: 28px;
-  }
-
-  .section-form__input:nth-last-of-type(-2n+1) {
-    margin-bottom: 58px;
-  }
-}
-
-
-@media screen and (min-width: 1680px) {
-  .section-form {
-    background-image: url(../../images/form-bgr-desk-larg.png);
-  }
-
-  .section-form__wrapper {
-    padding: 118px 356px 0px;
-    margin-bottom: 100px;
-  }
-
-  .section-form__title {
-    margin: 0px 0px 56px;
-    letter-spacing: 1.6px;
-  }
-
-  .section-form__description {
+  @include desktop-wide {
     font-size: 25px;
     line-height: 1.5;
     margin: 0px 0px 51px;
     letter-spacing: 1.2px;
   }
+}
 
-  .section-form__input:not(:nth-last-of-type(-2n+1)) {
+.section-form__input:not(:nth-last-of-type(-2n+1)) {
+  margin-bottom: 20px;
+
+  @include tablet {
+    margin-bottom: 30px;
+  }
+
+  @include desktop {
+    margin-bottom: 28px;
+  }
+
+  @include desktop-wide {
     margin-bottom: 26px;
+  }
+}
+
+.section-form__input:nth-last-of-type(-2n+1) {
+  margin-bottom: 53px;
+
+  @include desktop {
+    margin-bottom: 58px;
   }
 }
