--- a/project-01/src/sass/helpers/mixins.scss
+++ b/project-01/src/sass/helpers/mixins.scss
@@ -21,10 +21,12 @@
   }
 }
 
+
 @mixin pseudo($display: inline-block, $content: '') {
   display: $display;
   content: $content;
 }
+
 
 @mixin font-settings($size, $height) {
   font-size: $size;
@@ -38,15 +40,19 @@
 
 // @include font-colors(50px, green);
 
+
 @mixin width-percent($width-elem, $width-cont) {
   width: $width-elem / $width-cont * 100%;
 }
+
+// width: 300px / 960px * 100%;
 
 @mixin height-percent($height-elem, $height-cont) {
   height: $height-elem / $height-cont * 100%;
 }
 
-// width: 300px / 960px * 100%;
+// height: 300px / 960px * 100%;
+
 
 // @ min-screen(width) // shortcut for @media screen and (min-width ...)
 // @ max-screen(width) // shortcut for @media screen and (max-width ...)
@@ -76,4 +82,77 @@
 //       width: 30%;
 //     }
 //   }
+// }
+
+
+// Small tablets and large smartphones (landscape view)
+$screen-mobile: 320px;
+
+// Small tablets (portrait view)
+$screen-tablet: 768px;
+
+// Tablets and small desktops
+$screen-desktop: 1280px;
+
+// Large tablets and desktops
+$screen-desktop-wide: 1680px;
+
+// Small devices
+@mixin mobile {
+  @media (min-width: #{$screen-mobile}) {
+    @content;
+  }
+}
+
+// Medium devices
+@mixin tablet {
+  @media (min-width: #{$screen-tablet}) {
+    @content;
+  }
+}
+
+// Large devices
+@mixin desktop {
+  @media (min-width: #{$screen-desktop}) {
+    @content;
+  }
+}
+
+// Extra large devices
+@mixin desktop-wide {
+  @media (min-width: #{$screen-desktop-wide}) {
+    @content;
+  }
+}
+
+// Custom devices
+@mixin rwd($screen) {
+  @media (min-width: $screen+'px') {
+    @content;
+  }
+}
+
+// В качестве параметра $screen можем указать любой размер экрана.
+
+// использование созданных миксинов в базовом коде SCSS:
+// .container {
+//   padding: 0 15px;
+
+// 320px window width and more
+// @include mobile {
+//   padding: 0 20px;
+// }
+
+// 1280px window width and more
+// @include desktop {
+//   margin-left: auto;
+//   margin-right: auto;
+//   max-width: 1100px;
+// }
+
+// 1400px window width and more
+// @include rwd(1400) {
+//   margin-bottom: 20px;
+//   margin-top: 20px;
+// }
 // }
